--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -19,8 +19,10 @@ header{
 #back, #forward{
   display: flex;
   align-self: center;
-  width: 1rem;
-  height: 1rem;
+  width: 3rem;
+  height: 5rem;
+  font-size: 5rem;
+  padding: 1rem;
 }
 p{
   font-size: 2rem;
